lab1/Test/L1-A-3-35.output
Error Type A at Line 3
Error Type A at Line 6
Error Type A at Line 6
Error Type B at Line 9
Error Type B at Line 11
Error Type A at Line 12
Error Type B at Line 14
Error Type B at Line 14
Error Type A at Line 14
