lab1/Test/L1-A-3-35.cmm
struct nktRYAbCKt {
}oJhcNLKBl7hBLdm [ 1036740990 ] , JQ6Vgum13NReSQg 
  ~

;
'float TePbf6mjrrTe `, ELB_ 

;
struct E bNRk2IedunevfMZo1X ] [ 311906848 ] 
;
. float eKEiq948gLF [ 700402824 ] [ 1141603086 ] [ 
  2088414099 ] `
;
struct + @